// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavLink should render 1`] = `
<ForwardRef(SideNavLink)
  className="custom-classname"
  element="a"
  icon={
    <div>
      icon
    </div>
  }
  isActive={false}
  large={false}
>
  <SideNavItem
    large={false}
  >
    <li
      className="bx--side-nav__item"
    >
      <Link
        className="bx--side-nav__link custom-classname"
        element="a"
        icon={
          <div>
            icon
          </div>
        }
      >
        <a
          className="bx--side-nav__link custom-classname"
          icon={
            <div>
              icon
            </div>
          }
        >
          <SideNavLinkText>
            <span
              className="bx--side-nav__link-text"
            >
              link
            </span>
          </SideNavLinkText>
        </a>
      </Link>
    </li>
  </SideNavItem>
</ForwardRef(SideNavLink)>
`;

exports[`SideNavLink should render 2`] = `
<ForwardRef(SideNavLink)
  className="custom-classname"
  element="a"
  icon={
    <div>
      icon
    </div>
  }
  isActive={true}
  large={false}
>
  <SideNavItem
    large={false}
  >
    <li
      className="bx--side-nav__item"
    >
      <Link
        className="bx--side-nav__link bx--side-nav__link--current custom-classname"
        element="a"
        icon={
          <div>
            icon
          </div>
        }
      >
        <a
          className="bx--side-nav__link bx--side-nav__link--current custom-classname"
          icon={
            <div>
              icon
            </div>
          }
        >
          <SideNavLinkText>
            <span
              className="bx--side-nav__link-text"
            >
              link
            </span>
          </SideNavLinkText>
        </a>
      </Link>
    </li>
  </SideNavItem>
</ForwardRef(SideNavLink)>
`;
